# gw_fopt

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE-APACHE  README.md  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  scan_gw_u1.py  search.json  sitemap.xml
.github/workflows/: CI.yml  docs.yml
api/python/: index.html
api/rust/: index.html
docs/: generalized_bulkflow.md  index.md  installation.md  lattice_bubbles.md  sample.md  two_bubbles.md
docs/api/: python.md  rust.md
docs/examples/: generalized_bulkflow.ipynb  generalized_bulkflow.py  lattice_bubbles.ipynb  lattice_bubbles.py  two_bubbles.ipynb  two_bubbles.py  two_bubbles_evolution.py  two_bubbles_exact_gw.py  visualize_samples.ipynb  visualize_samples.py
docs/examples/inputs/: confY.txt
docs/stylesheets/: extra.css
generalized_bulkflow/: index.html
installation/: index.html
lattice_bubbles/: index.html
rust/: Cargo.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/benches/: Cargo.toml  bulk_flow_bench.rs  integrate_1d.rs  jn_puruspe_vs_scirs2.rs  two_bubbles_gw_calc_bench.rs
rust/bubble-gw/: Cargo.toml
rust/bubble-gw/examples/: example_bubbles_nalgebra.rs  example_four_vectors.rs  example_integrate.rs  example_lattice_bubbles.rs  example_many_bubbles_bulkflow.rs  example_ode.rs  example_spherical_lattice.rs  example_toby_config.rs
rust/bubble-gw/src/: lib.rs  many_bubbles.rs  time_cutoff.rs  two_bubbles.rs
rust/bubble-gw/src/many_bubbles/: bubbles_nucleation.rs  generalized_bulk_flow.rs  lattice.rs  lattice_bubbles.rs  new_generalized_bulk_flow.rs  spacetime.rs
rust/bubble-gw/src/many_bubbles/bubbles_nucleation/: fixed_rate_nucleation.rs  old_fixed_rate_nucleation.rs  spontaneous_nucleation.rs
rust/bubble-gw/src/many_bubbles/lattice/: boundary_condition.rs  cartesian_lattice.rs  empty_lattice.rs  errors.rs  parallelepiped_lattice.rs  spherical_lattice.rs  traits.rs
rust/bubble-gw/src/two_bubbles/: gw_calc.rs  new_gw_calc.rs
rust/bubble-gw/src/utils/: integrate.rs  sample.rs
rust/bubble-gw/tests/: test_bulk_flow.rs  test_sample.rs  test_two_bubbles_gw_calc_equivalence.rs
rust/c-bubble-gw/: Cargo.toml  README.md  cbindgen.toml
rust/c-bubble-gw/src/: lib.rs
rust/c-bubble-gw/tests/: c_api.rs
rust/docs/rustdoc/: katex-header.html
rust/py-bubble-gw/: Cargo.toml
rust/py-bubble-gw/src/: lib.rs  py_two_bubbles.rs
rust/py-bubble-gw/src/py_many_bubbles/: py_generalized_bulk_flow.rs  py_isometry.rs  py_lattice.rs  py_lattice_bubbles.rs
rust/py-bubble-gw/src/py_many_bubbles/py_bubbles_nucleation/: py_fixed_rate_nucleation.rs  py_spontaneous_nucleation.rs
rust/py-bubble-gw/src/py_two_bubbles/: py_gw_calc.rs  py_new_gw_calc.rs
sample/: index.html
src/bubble_gw/: Cargo.toml  README.md  Session.vim  description.md  pyproject.toml  todo.md
src/bubble_gw/.cargo/: config.toml
src/bubble_gw/benches/: Cargo.toml  integrate_1d.rs
src/bubble_gw/bubble_gw_py/: Cargo.toml
src/bubble_gw/bubble_gw_py/src/: lib.rs  many_bubbles_bindings.rs  py_two_bubbles.rs  py_utils.rs  two_bubbles_bindings.rs  utils_bindings.rs
src/bubble_gw/bubble_gw_py/src/py_many_bubbles/: py_bubble_formation.rs  py_bulk_flow.rs
src/bubble_gw/bubble_gw_rs/: Cargo.toml
src/bubble_gw/bubble_gw_rs/examples/: two_bubbles_bulkflow.rs
src/bubble_gw/bubble_gw_rs/src/: lib.rs  many_bubbles.rs  two_bubbles.rs  utils.rs
src/bubble_gw/bubble_gw_rs/src/many_bubbles/: bubble_formation.rs  bulk_flow.rs
src/bubble_gw/bubble_gw_rs/src/two_bubbles/: gw_calc.rs  integrand.rs
src/bubble_gw/bubble_gw_rs/src/utils/: integrate.rs  integrate_old.rs  is_close.rs  sample.rs
src/bubble_gw/bubble_gw_rs/tests/: envelope_manybubbles_scan=n_phix.csv  test_bulk_flow.rs  test_integrate.rs  test_sample.rs
src/gw_fopt/: __init__.py
src/gw_fopt/bubble_dynamics/: __init__.py
src/gw_fopt/bubble_dynamics/bubble_simulator/: __init__.py  bubble_envelope_mc.py  bubble_formation_simulator.py  bubble_intersections.py  generic_potential.py  lattice_setup.py  pde_bubble_solver.py  potentials.py
src/gw_fopt/bubble_dynamics/src/bubble_dynamics/: __init__.py
src/gw_fopt/bubble_dynamics/src/gw_fopt/bubble_dynamics/utils/: __init__.py
src/gw_fopt/bubble_dynamics/utils/: data_gw_bulkflow.py  derivative.py  filter_dataframe.py  linsample.py  logsample.py  power_law_fitter.py  sample.py  sample_arr.py  segment_complement.py  solid_angle.py  surface_tension_fitter.py
src/gw_fopt/bubble_dynamics/visualizer/: __init__.py  extract_gw_bulkflow.py  general_broken_power_law.py  get_colors.py  gw_bulkflow_visualizer.py  gw_two_bubbles_visualizer.py  mean_error_type.py  two_bubbles_evolution_visualizer.py
src/gw_fopt/bubble_gw/: __init__.py  __init__.pyi  _py_bubble_gw.pyi  many_bubbles.pyi  two_bubbles.pyi  utils.pyi
src/pygw_fopt/bubble_simulator/: __init__.py  bubble_envelope_mc.py  bubble_formation_simulator.py  lattice_setup.py  pde_bubble_solver.py  potentials.py
src/pygw_fopt/utils/: derivative.py  logsample.py  sample.py  sample_arr.py  segment_complement.py  solid_angle.py
src/pygw_fopt/visualizer/: __init__.py  two_bubbles_evolution_visualizer.py
tests/data/two_bubbles_code_v1_0_1/: quick_lambda_0p01_gamma_2.yaml
two_bubbles/: index.html
