name = "gw-fopt"
version = "0.1.0"
description = "Fast gravitational wave calculation from bubble collisions in first-order phase transitions"
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
authors = [
    { name = "hoquoctrung", email = "hoquoctrung98@gmail.com" }
]
requires-python = ">=3.13,<3.14"

[tool.uv.workspace]
members = [
    "packages/bubble-dynamics",
    "packages/bubble-gw/crates",
]

[tool.uv.sources]
bubble-dynamics = { workspace = true, editable = true }
bubble-gw = { workspace = true, editable = true }

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0", "maturin>=1.9,<2.0"]
build-backend = "uv_build"
