[project]
name = "gw-fopt"
# version = "0.1.0"
dynamic = ["version"]
description = "Gravitational Wave background sourced by bubble collisions in First Order Phase Transitions"
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
authors = [
    { name = "hoquoctrung", email = "hoquoctrung98@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "cosmotransitions>=2.0.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "ipympl>=0.9.7",
    "h5py>=3.15.1",
    "pyyaml>=6.0.3",
    "debugpy>=1.8.19",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "psweep>=0.15.0",
    "psweep>=0.13.0",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]
manifest-path = "rust/py-bubble-gw/Cargo.toml"
module-name = "gw_fopt.bubble_gw._py_bubble_gw"
python-source = "src"
# Include type stubs
include = ["src/**/*.pyi"]

[tool.uv]
cache-keys = [{file = "**/*.toml"}, {file = "**/*.rs"}, {file = "**/*.py"}]
