[package]
name = "bubble_gw"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ndarray = {workspace = true}
num-complex = {workspace = true}
num = {workspace = true}
puruspe = "0.4.3"
rayon = "1.11"
peroxide = { version = "0.40.2", features = ["complex"] }
rand = "0.10.0"
rand_distr = "0.6.0"
array-init = "2.1.0"
num-traits = "0.2.19"
csv = "1.4.0"
serde = "1.0.228"
thiserror = "2.0.18"
ndarray-csv = "0.5.4"
nalgebra.workspace = true
approx = { version = "0.5.1", features = ["num-complex"] }
getrandom = "0.4.1"
differential-equations.workspace = true

[lib]
# crate-type = ["cdylib", "lib"]
crate-type = ["lib"]
