[package]
name = "py-bubble-gw"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "py_bubble_gw"
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = {workspace = true}
nalgebra = {workspace = true}
num-complex = {workspace = true}
num = {workspace = true}
bubble_gw = { path = "../bubble-gw" }
pyo3 = { version = "0.27.1", features = ["extension-module", "num-complex", "experimental-inspect"] }
numpy = {version = "0.27.1", features = ["nalgebra"]}
thiserror = "2.0.18"
csv = "1.4.0"
differential-equations.workspace = true

[build-dependencies]
pyo3-build-config = "0.27.1"
