[package]
name = "py-bubble-gw"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../docs/rustdoc/katex-header.html"]

[lib]
name = "py_bubble_gw"
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = {workspace = true}
nalgebra = {workspace = true}
num-complex = {workspace = true}
num = {workspace = true}
bubble_gw = { path = "../bubble-gw" }
pyo3 = { version = "0.28.3", features = ["extension-module", "num-complex", "experimental-inspect"] }
numpy = {version = "0.28.0", features = ["nalgebra"]}
thiserror = "2.0.18"
csv = "1.4.0"
differential-equations.workspace = true
peroxide = { version = "0.41.2", features = ["complex"] }

[build-dependencies]
pyo3-build-config = "0.28.3"
