[workspace]
members = [
    "bubble_gw_rs",
    "benches",
    "bubble_gw_py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Quoc Trung Ho <hoquoctrung98@gmail.com>"]
description = "Rust package for computing Gravitational Waves background from First Order Phase Transition"
readme = "README.md"
license="MIT"
rust-version = "1.86"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = true

[profile.bench]
opt-level = 3
