[package]
name = "bubble_gw_benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bubble_gw_rs = { path = "../bubble_gw_rs" }
criterion = "0.7.0"
ndarray = "0.17.1"
num-traits = "0.2.19"
# Benchmarking framework
# criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "integrate_1d"
path = "integrate_1d.rs"
harness = false
