[package]
name = "bubble_gw_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "bubble_gw"
crate-type = ["cdylib", "lib"]

[dependencies]
bubble_gw_rs = { path = "../bubble_gw_rs" }
pyo3 = { version = "0.26", features = ["extension-module", "num-complex"] }
numpy = "0.26.0"
ndarray = {version = "0.16.1", features = ["rayon"]}
num-complex = "0.4.6"
num = "0.4.3"

[build-dependencies]
pyo3-build-config = "0.26"
