[package]
name = "bubble_gw_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ndarray = {version = "0.16.1", features = ["rayon", "approx"]}
puruspe = "0.4.2"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
num-complex = "0.4"
peroxide = { version = "0.40.0", features = ["complex"] }
rand = "0.9.2"
rand_distr = "0.5.1"
array-init = "2.1.0"
num = "0.4.3"
num_cpus = "1.17.0"
num-traits = "0.2.19"

[lib]
crate-type = ["cdylib", "lib"]
