[package]
name = "bubble_gw_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ndarray = {workspace = true}
num-complex = {workspace = true}
num = {workspace = true}
puruspe = "0.4.2"
rayon = "1.11"
peroxide = { version = "0.40.0", features = ["complex"] }
rand = "0.9.2"
rand_distr = "0.5.1"
array-init = "2.1.0"
num-traits = "0.2.19"

[lib]
crate-type = ["cdylib", "lib"]
